--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <!-- CSS Links -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Font Styles -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <title>Swipe</title>
   </head>
   <body></body>
 </html>
