--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Swipe</title>
+    <title>Swipe Solutions</title>
   </head>
   <body>
     <h1>Heading 1</h1>
@@ -24,5 +24,9 @@
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
     <a href="#">Click Me</a>
+    <br />
+    <button class="primary-button">Click me</button>
+    <br />
+    <button class="secondary-button">Click me</button>
   </body>
 </html>
