--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
     <button class="primary-button">Click me</button>
     <br />
     <button class="secondary-button">Click me</button>
+    <br />
+    <button class="primary-button with-icon">
+      Click me <img src="assets/arrow-right-light.svg" />
+    </button>
   </body>
 </html>
