Finished creating the navigation bar style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#">Pricing</a></li>
       </ul>
 
-      <button class="primary-button">Sign in</button>
+      <button class="primary-button navbar-button">Sign in</button>
     </nav>
 
     <h1>Heading 1</h1>
