--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <button class="secondary-button">Click me</button>
     <br />
     <button class="primary-button with-icon">
-      Click me <img src="assets/arrow-right-light.svg" />
+      Click me <img src="assets/arrow-right-light.svg" alt="Arrow icon" />
     </button>
   </body>
 </html>
