--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Swipe Solutions</title>
+    <title>Swipe | Financial transaction infrastucture online</title>
   </head>
   <body>
+    <!-- Navigation -->
     <nav class="navbar">
       <img src="assets/logo-white.svg" alt="Swipe, inc." />
       <ul class="menu">
@@ -26,24 +27,34 @@
         <li><a href="#">Resources </a></li>
         <li><a href="#">Pricing</a></li>
       </ul>
-
       <button class="primary-button navbar-button">Sign in</button>
     </nav>
 
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
-    <a href="#">Click Me</a>
-    <br />
-    <button class="primary-button">Click me</button>
-    <br />
-    <button class="secondary-button">Click me</button>
-    <br />
-    <button class="primary-button with-icon">
-      Click me <img src="assets/arrow-right-light.svg" alt="Arrow icon" />
-    </button>
+    <!-- Hero section -->
+    <div class="hero">
+      <div class="section-container two-column">
+        <div class="col-left">
+          <h1>Payments infrastucture for the world</h1>
+          <p>
+            Tons of companies all over the world use Swipe's seamless platform
+            to manage their businesse's entire financial transaction
+            infrastucture online.
+          </p>
+          <div class="button-container">
+            <button class="primary-button with-icon">
+              Start now
+              <img src="assets/arrow-right-light.svg" alt="Arrow icon" />
+            </button>
+            <button class="secondary-button with-icon">
+              Contact sales
+              <img src="assets/arrow-right-purple.svg" />
+            </button>
+          </div>
+        </div>
+        <div class="col-right hero-phone-container">
+          <img src="assets/hero-phone.png" alt="Phone app screen" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
