--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Swipe | Financial transaction infrastucture online</title>
+    <title>Swipe | Payments infrastucture platform</title>
   </head>
   <body>
     <!-- Navigation -->
@@ -30,31 +30,37 @@
       <button class="primary-button navbar-button">Sign in</button>
     </nav>
 
-    <!-- Hero section -->
-    <div class="hero">
-      <div class="section-container two-column">
-        <div class="col-left">
-          <h1>Payments infrastucture for the world</h1>
-          <p>
-            Tons of companies all over the world use Swipe's seamless platform
-            to manage their businesse's entire financial transaction
-            infrastucture online.
-          </p>
-          <div class="button-container">
-            <button class="primary-button with-icon">
-              Start now
-              <img src="assets/arrow-right-light.svg" alt="Arrow icon" />
-            </button>
-            <button class="secondary-button with-icon">
-              Contact sales
-              <img src="assets/arrow-right-purple.svg" />
-            </button>
+    <main>
+      <!-- Hero section -->
+      <div class="hero">
+        <div class="section-container two-column">
+          <div class="col-left">
+            <h1>Payments infrastucture for the world</h1>
+            <p>
+              Tons of companies all over the world use Swipe's seamless platform
+              to manage their businesse's entire financial transaction
+              infrastucture online.
+            </p>
+            <div class="button-container">
+              <button class="primary-button with-icon">
+                Start now
+                <img src="assets/arrow-right-light.svg" alt="Arrow icon" />
+              </button>
+              <button class="secondary-button with-icon">
+                Contact sales
+                <img src="assets/arrow-right-purple.svg" />
+              </button>
+            </div>
+          </div>
+          <div class="col-right hero-phone-container">
+            <img
+              src="assets/hero-phone.png"
+              class="hero-phone"
+              alt="Phone app screen"
+            />
           </div>
         </div>
-        <div class="col-right hero-phone-container">
-          <img src="assets/hero-phone.png" alt="Phone app screen" />
-        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
