--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </button>
               <button class="secondary-button with-icon">
                 Contact sales
-                <img src="assets/arrow-right-purple.svg" />
+                <img src="assets/arrow-right-purple.svg" alt="Arrow icon" />
               </button>
             </div>
           </div>
@@ -107,6 +107,25 @@
             Start now
             <img src="assets/arrow-right-light.svg" alt="Arrow icon" />
           </button>
+        </div>
+      </div>
+      <!-- Photos Grid Section -->
+      <div class="graphic-section">
+        <div class="section-container">
+          <div class="graphic-grid">
+            <img
+              src="assets/credit-card.png"
+              alt="Credit card image"
+              id="credit-card"
+            />
+            <img
+              src="assets/slack-invoice.png"
+              alt="Slack invoice image"
+              id="slack-invoice"
+            />
+            <img src="assets/phone.png" alt="Phone iamge" id="phone" />
+            <img src="assets/dash.png" alt="Dash image" id="dash" />
+          </div>
         </div>
       </div>
       <!--  -->
