--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="integrations-section">
         <div class="section-container two-column">
           <div class="col-left">
-            <p class="subtitle">Designed for Engineers</p>
+            <p class="subtitle2">Designed for Engineers</p>
             <h2>The world’s best and most intuitive APIs</h2>
             <p>
               We abstract the hard stuff away so your teams don't can focus on
@@ -155,7 +155,7 @@
                   We offer front end and back end libraries in some of the most
                   widely used technologies, old and new.
                 </p>
-                <button class="primary-button with-icon">
+                <button class="secondary-button with-icon">
                   See libraries <img src="assets/arrow-right-blue.svg" />
                 </button>
               </div>
@@ -167,7 +167,7 @@
                   Use integrations for systems like Shopify, WooCommerce,
                   NetSuite, and more.
                 </p>
-                <button class="primary-button with-icon">
+                <button class="secondary-button with-icon">
                   Explore partners <img src="assets/arrow-right-blue.svg" />
                 </button>
               </div>
