Wrote part of the markup for the global scale section

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </div>
         </div>
       </div>
-      <!-- WHY Swipe Section -->
+      <!-- Why Swipe Section -->
       <div class="why-swipe-section">
         <div class="section-container">
           <p class="subtitle">Why Swipe</p>
@@ -224,6 +224,20 @@
                 help optimize all products, from fraud to revenue recovery and
                 more.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Global Scale Section -->
+      <div class="global-section">
+        <div class="section-container">
+          <div class="two-column">
+            <div class="col-left">
+              <p class="subtitle2">Global scale</p>
+              <h2>A structure for global businesses</h2>
+            </div>
+            <div class="col-right">
+              <img src="assets/global-graphic.png" alt="Graphic of a globe" />
             </div>
           </div>
         </div>
