Finished global scale sections markup

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           </div>
         </div>
       </div>
+
       <!-- Partners section -->
       <div class="partners-section">
         <div class="section-container">
@@ -76,6 +77,7 @@
           </div>
         </div>
       </div>
+
       <!-- Unified platform section -->
       <div class="unified-platform-section">
         <div class="section-container">
@@ -109,6 +111,7 @@
           </button>
         </div>
       </div>
+
       <!-- Photos Grid Section -->
       <div class="graphic-section">
         <div class="section-container">
@@ -128,6 +131,7 @@
           </div>
         </div>
       </div>
+
       <!-- Integrations Section -->
       <div class="integrations-section">
         <div class="section-container two-column">
@@ -183,6 +187,7 @@
           </div>
         </div>
       </div>
+
       <!-- Why Swipe Section -->
       <div class="why-swipe-section">
         <div class="section-container">
@@ -228,6 +233,7 @@
           </div>
         </div>
       </div>
+
       <!-- Global Scale Section -->
       <div class="global-section">
         <div class="section-container">
@@ -235,9 +241,44 @@
             <div class="col-left">
               <p class="subtitle2">Global scale</p>
               <h2>A structure for global businesses</h2>
+              <p>
+                Swipe makes moving money simple, borderless, and programmable -
+                just like the rest of the internet. We have teams all over the
+                world and we process billions and billions of dollars yearly for
+                <a href="#"
+                  >startups, Fortune 500s, and everything in between.</a
+                >
+              </p>
             </div>
             <div class="col-right">
               <img src="assets/global-graphic.png" alt="Graphic of a globe" />
+            </div>
+          </div>
+
+          <div class="card-container">
+            <div class="card">
+              <h3>250M+</h3>
+              <p class="secondary-text">
+                API requests each day, peaking at 15,000 requests a second.
+              </p>
+            </div>
+            <div class="card">
+              <h3>97%</h3>
+              <p class="secondary-text">
+                of US adults have bought from businesses that use Swipe
+              </p>
+            </div>
+            <div class="card">
+              <h3>135+</h3>
+              <p class="secondary-text">
+                currencies and payment methods supported
+              </p>
+            </div>
+            <div class="card">
+              <h3>35+</h3>
+              <p class="secondary-text">
+                countries with local, acquiring, optimizing acceptance rates
+              </p>
             </div>
           </div>
         </div>
