Positioned the globe image in the global section

--- a/index.html
+++ b/index.html
@@ -251,7 +251,11 @@
               </p>
             </div>
             <div class="col-right">
-              <img src="assets/global-graphic.png" alt="Graphic of a globe" />
+              <img
+                id="globe"
+                src="assets/global-graphic.png"
+                alt="Graphic of a globe"
+              />
             </div>
           </div>
 
