Styled the cards top section and positioned images correctly

--- a/index.html
+++ b/index.html
@@ -307,10 +307,14 @@
           <div class="col-right">
             <div class="swipe-sessions-card">
               <div class="card-top">
-                <img src="assets/swipe-sessions.png" alt="" />
+                <img
+                  id="sessions-logo"
+                  src="assets/swipe-sessions.png"
+                  alt="Swipe Sessions logo"
+                />
                 <div class="avatars">
-                  <img src="assets/avatar1.png" alt="" />
-                  <img src="assets/avatar2.png" alt="" />
+                  <img src="assets/avatar1.png" alt="Person" />
+                  <img src="assets/avatar2.png" alt="Person" />
                 </div>
               </div>
               <div class="card-bottom">
