--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     </nav>
 
     <main>
+      <!-- GRADIENT BACKGROUND -->
+      <canvas id="gradient-canvas"></canvas>
+
       <!-- Hero section -->
       <div class="hero">
         <div class="section-container two-column">
