--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!-- CSS Links -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
 
     <!-- Font Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
