--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <li><a href="#">Pricing</a></li>
       </ul>
       <button class="primary-button navbar-button">Sign in</button>
+
+      <div class="hamburger-button">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
     </nav>
 
     <main>
